--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -7,22 +7,18 @@
 
 <body class="productCard">
   <%- include('../partials/header') %> 
-  <main>
+   <main>
     <section class="producto">
       <div class="producto__texto">
+        <h1>🔥LUFFA + JABÓN EXFOLIANTE DE NARANJA Y CAFÉ🔥</h1>
         <div class="producto__imagen">
-          <h4>🔥 Luffa + Jabón Exfoliante de Naranja y Café🔥</h4>
           <div class="box-imagen">
-          <img src="/images/jabonexfo_luffa2.jpg" alt="producto-combo">
+            <img src="/images/jabonexfo_luffa2.jpg" alt="producto-combo">
           </div>
-          <h2>$ 300.-</h2>
-          <span class="rating">⭐⭐⭐⭐</span>
-        </div>
-        <div class="iconos-eco">
-          <img src="/images/icono1.jpg" alt="">
-          <img src="/images/icono2.jpg" alt="">
-          <img src="/images/icono3.jpg" alt="">
-          <img src="/images/icono4.jpg" alt="">
+          <div class="box-info">
+            <h2>$ 300.-</h2>
+            <span class="rating">⭐⭐⭐⭐</span>
+          </div>
         </div>
         <p>La luffa (o esponja vegetal) tiene propiedades exfoliantes, ideal
           para zonas a suavizar: codos, pies, manos. <br>
@@ -32,13 +28,13 @@
           en la esponja.♻️ <br>
           🌻<span style="font-weight: bold;">Nuestra versión exfoliante de Naranja y Café
             combate el acné y la secrecion sebácea, dejando un delicioso aroma en la piel 🍊</span> <br>
-          Cuidar tu piel y la salud de la Tierra, sin maltratar animales, es posible; <br> 
+          Cuidar tu piel y la salud de la Tierra, sin maltratar animales, es posible; <br>
           <br> SUMATE AL CAMBIO💚
         </p>
         <div class="producto__cart">
-        <button><i class="fa-solid fa-share-nodes"></i></button>
-        <button><i class="fa-solid fa-star"></i></button>
-        <button class="quiero"><i class="fa-solid fa-cart-shopping"></i></button>
+          <button><i class="fa-solid fa-star"></i></button>
+          <a href="/productCarrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
+          <button><i class="fa-solid fa-share-nodes"></i></button>
         </div>
       </div>
     </section>
@@ -51,12 +47,19 @@
                 <span class="promo">10% off</span>
               </div>
               <div class="info-container">
-                <h2> Jabón Humectante</h2>
+                <h2> Jabón Rosas</h2>
                 <h4>BioCorporal</h4>
-                <h3>$ 300.00.-</h3>
+                <span>-Humectante-</span>
+                <h3>$300.00.-</h3>
             </a>
-            <span class="rating">⭐⭐⭐⭐</span>
-            <a href="" class="add-cart">Quiero! 🛒</a>
+            <div class="card-c-iconos">
+              <span class="rating">⭐⭐⭐⭐</span>
+              <a href="#" class="add-cart">Quiero! 🛒</a>
+              <div class="buttons">
+                <button><i class="fa-solid fa-share-nodes"></i></button>
+                <button><i class="fa-solid fa-star"></i></button>
+              </div>
+            </div>
           </div>
           </div>
           <div class="card estilo-c">
@@ -66,12 +69,19 @@
                 <span class="promo">25% off</span>
               </div>
               <div class="info-container">
-                <h2> Kit Exfoliante </h2>
-                <h4>BioSpa<h4>
-                    <h3>$ 600.00.-</h3>
+                <h2>Luffa + Jabón</h2>
+                <h4>BioSpa</h4>
+                <span>-Exfoliante-</span>
+                <h3>$ 600.00.-</h3>
             </a>
-            <span class="rating">⭐⭐⭐⭐</span>
-            <a href="#" class="add-cart">Quiero! 🛒</a>
+            <div class="card-c-iconos">
+              <span class="rating">⭐⭐⭐⭐</span>
+              <a href="#" class="add-cart">Quiero! 🛒</a>
+              <div class="buttons">
+                <button><i class="fa-solid fa-share-nodes"></i></button>
+                <button><i class="fa-solid fa-star"></i></button>
+              </div>
+            </div>
           </div>
           </div>
           <div class="card estilo-c">
@@ -83,25 +93,83 @@
               <div class="info-container">
                 <h2>Kit Coco</h2>
                 <h4>BioCapilar</h4>
+                <span>-Humectante-</span>
                 <h3>$ 300.00.-</h3>
             </a>
-            <span class="rating">⭐⭐⭐⭐</span>
-            <a href="#" class="add-cart">Quiero! 🛒</a>
+            <div class="card-c-iconos">
+              <span class="rating">⭐⭐⭐⭐</span>
+              <a href="#" class="add-cart">Quiero! 🛒</a>
+              <div class="buttons">
+                <button><i class="fa-solid fa-share-nodes"></i></button>
+                <button><i class="fa-solid fa-star"></i></button>
+              </div>
+            </div>
           </div>
           </div>
-          <div class="card estilo-c" id="no-desktop">
+          <div class="card estilo-c">
+            <a href="#">
               <div class="img-container">
                 <img src="/images/jaboncito_exfoliantes.jpg" alt="producto">
                 <span class="promo">15% off</span>
               </div>
               <div class="info-container">
-                <h2>Kit Coco</h2> 
-                <span class="rating">⭐⭐⭐⭐</span>
+                <h2>Kit Coco</h2>
                 <h4>BioCapilar</h4>
+                <span>-Humectante-</span>
                 <h3>$ 300.00.-</h3>
-            <button><i class="fa-solid fa-share-nodes"></i></button>
-            <button><i class="fa-solid fa-star"></i></button>
-            <p><a href="/productCart" class="add-cart">Quiero! 🛒</a></p>
+            </a>
+            <div class="card-c-iconos">
+              <span class="rating">⭐⭐⭐⭐</span>
+              <a href="#" class="add-cart">Quiero! 🛒</a>
+              <div class="buttons">
+                <button><i class="fa-solid fa-share-nodes"></i></button>
+                <button><i class="fa-solid fa-star"></i></button>
+              </div>
+            </div>
+          </div>
+          </div>
+          <div class="card estilo-c">
+            <a href="#">
+              <div class="img-container">
+                <img src="/images/jaboncito_exfoliantes.jpg" alt="producto">
+                <span class="promo">15% off</span>
+              </div>
+              <div class="info-container">
+                <h2>Kit Coco</h2>
+                <h4>BioCapilar</h4>
+                <span>-Humectante-</span>
+                <h3>$ 300.00.-</h3>
+            </a>
+            <div class="card-c-iconos">
+              <span class="rating">⭐⭐⭐⭐</span>
+              <a href="#" class="add-cart">Quiero! 🛒</a>
+              <div class="buttons">
+                <button><i class="fa-solid fa-share-nodes"></i></button>
+                <button><i class="fa-solid fa-star"></i></button>
+              </div>
+            </div>
+          </div>
+          </div>
+          <div class="card estilo-c">
+            <a href="#">
+              <div class="img-container">
+                <img src="/images/jaboncito_exfoliantes.jpg" alt="producto">
+                <span class="promo">15% off</span>
+              </div>
+              <div class="info-container">
+                <h2>Kit Coco</h2>
+                <h4>BioCapilar</h4>
+                <span>-Humectante-</span>
+                <h3>$ 300.00.-</h3>
+            </a>
+            <div class="card-c-iconos">
+              <span class="rating">⭐⭐⭐⭐</span>
+              <a href="#" class="add-cart">Quiero! 🛒</a>
+              <div class="buttons">
+                <button><i class="fa-solid fa-share-nodes"></i></button>
+                <button><i class="fa-solid fa-star"></i></button>
+              </div>
+            </div>
           </div>
           </div>
         </section>
@@ -114,8 +182,10 @@
             </div>
             <div class="card__descripcion">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex ducimus doloremque porro? Nulla
-                dolorum maiores laboriosam mollitia dolorem magni. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Exercitationem autem incidunt iste? Ipsam doloribus, repellat, suscipit veritatis repudiandae amet atque aut
+                dolorum maiores laboriosam mollitia dolorem magni. Lorem ipsum dolor, sit amet consectetur adipisicing
+                elit.
+                Exercitationem autem incidunt iste? Ipsam doloribus, repellat, suscipit veritatis repudiandae amet atque
+                aut
                 quaerat esse
                 quisquam nulla eaque modi voluptate, consectetur ad.</p>
             </div>
@@ -127,8 +197,10 @@
             </div>
             <div class="card__descripcion">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex ducimus doloremque porro? Nulla
-                dolorum maiores laboriosam mollitia dolorem magni. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Exercitationem autem incidunt iste? Ipsam doloribus, repellat, suscipit veritatis repudiandae amet atque aut
+                dolorum maiores laboriosam mollitia dolorem magni. Lorem ipsum dolor, sit amet consectetur adipisicing
+                elit.
+                Exercitationem autem incidunt iste? Ipsam doloribus, repellat, suscipit veritatis repudiandae amet atque
+                aut
                 quaerat esse
                 quisquam nulla eaque modi voluptate, consectetur ad.</p>
             </div>
@@ -140,24 +212,22 @@
             </div>
             <div class="card__descripcion">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex ducimus doloremque porro? Nulla
-                dolorum maiores laboriosam mollitia dolorem magni. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Exercitationem autem incidunt iste? Ipsam doloribus, repellat, suscipit veritatis repudiandae amet atque aut
+                dolorum maiores laboriosam mollitia dolorem magni. Lorem ipsum dolor, sit amet consectetur adipisicing
+                elit.
+                Exercitationem autem incidunt iste? Ipsam doloribus, repellat, suscipit veritatis repudiandae amet atque
+                aut
                 quaerat esse
                 quisquam nulla eaque modi voluptate, consectetur ad.</p>
             </div>
           </div>
-          <div class="box-imagen-consejo1">
-            <img src="/images/consejo1.jpg" alt="">
-            </div>
-            <div class="video">
-              <video src="https://www.youtube.com/watch?v=wTkMFSgqi1I"></video>
-            </div>
+          <div class="iconos-eco">
+            <img src="/images/icono1.jpg" alt="">
+            <img src="/images/icono2.jpg" alt="">
+            <img src="/images/icono3.jpg" alt="">
+            <img src="/images/icono4.jpg" alt="">
+          </div>
         </section>
-        <div class="banner">
-          <img src="/images/foto_consejos.jpg" alt="">
-        </div>
   </main>
-
   <%- include('../partials/footer') %> 
 </body>
 
